fixes alignment in cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8826,6 +8826,7 @@ select.list-dt:focus {
     width: calc(100% - 28px);
     justify-content: center;
     padding: 2rem 0;
+    margin: 0px 30px 0px 0px;
   }
 
   .msomoderate_box.step1 label {
